--- a/EntreGaudium/app/src/main/res/layout/activity_maps.xml
+++ b/EntreGaudium/app/src/main/res/layout/activity_maps.xml
@@ -176,4 +176,15 @@
         android:drawableTop="@drawable/ic_bug"
         android:text="Solicitar pedido"
         android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/btnPerfil"
+        android:layout_width="56dp"
+        android:layout_height="66dp"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="16dp"
+        android:background="@null"
+        android:drawableBottom="@drawable/user_icon"
+        android:padding="16dp"
+        android:textSize="24sp" />
 </RelativeLayout>
