--- a/EntreGaudium/app/src/main/res/layout/activity_profile.xml
+++ b/EntreGaudium/app/src/main/res/layout/activity_profile.xml
@@ -23,6 +23,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/nome_entregador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
@@ -33,6 +34,7 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/cargo_entregador"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
@@ -55,6 +57,7 @@
         android:orientation="vertical">
         
         <TextView
+            android:id="@+id/desc_entregador"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans"
@@ -85,6 +88,7 @@
                     android:src="@drawable/ic_entregas"
                     android:layout_gravity="center"/>
                 <TextView
+                    android:id="@+id/entregas_feitas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
@@ -112,6 +116,7 @@
                     android:src="@drawable/ic_saldo"
                     android:layout_gravity="center"/>
                 <TextView
+                    android:id="@+id/saldo_entregador"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
@@ -139,6 +144,7 @@
                     android:src="@drawable/ic_nota"
                     android:layout_gravity="center"/>
                 <TextView
+                    android:id="@+id/nota_entregador"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="22sp"
